--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular": "1.4.12",
     "angular-material": "http://github.com/angular/bower-material/tarball/v1.1.0-rc2",
     "angular-ui-date": "^1.1.1",
+    "angularfire": "^2.1.0",
     "firebase": "^3.5.2"
   },
   "devDependencies": {
